tests/type-errors/arith_mult_tez_rat.arl
archetype arith_mult_tez_rat

entry main () {
  effect {
    var v = 1tz * (1 div 2)
  }
}
